@startuml GoFit_ERD_06_Admin
!pragma layout smetana
title ERD - Admin settings, notifications log, audit (public)

hide circle
skinparam linetype ortho

class "auth.users" as u <<auth>> {
  id : uuid PK
}

class "admin_settings" as aset <<Table>> {
  id / key
  value JSONB
}

class "admin_notifications" as an <<Table>> {
  id : uuid PK
  admin_user_id : uuid FK -> u
}

class "admin_audit_logs" as al <<Table>> {
  id : uuid PK
  admin_user_id : uuid FK -> u
  action
  resource_type
  resource_id
  details JSONB
}

u ||--o{ al
u ||--o{ an

note bottom of al
  create_admin_audit_logs.sql creates the current audit table.
  remove_old_audit_log_table.sql drops the old singular table.
end note

note bottom of aset
  database/migrations/create_admin_settings.sql
end note

note bottom of an
  database/migrations/create_admin_notifications.sql
end note

@enduml
